--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BettrBot - Perfect Strategy Automation for Stake</title>
+  <title>BettrBot - Perfect Strategy Automation for Stake.us Blackjack</title>
+  <meta name="description" content="Automate your Stake.us blackjack gameplay with mathematically perfect basic strategy. BettrBot plays every hand optimally - hit, stand, double, and split for maximum RTP.">
+  <meta name="keywords" content="BettrBot, Stake.us, blackjack bot, blackjack automation, basic strategy, perfect strategy, gambling bot">
+  <meta name="author" content="BettrBot">
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="BettrBot - Perfect Strategy Automation for Stake.us">
+  <meta property="og:description" content="Automate your blackjack gameplay with mathematically perfect basic strategy. Hit, stand, double, and split—all optimized for maximum RTP.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://bettrbot.com">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BettrBot - Perfect Strategy Automation">
+  <meta name="twitter:description" content="Automate your Stake.us blackjack with mathematically perfect basic strategy.">
+  
+  <link rel="canonical" href="https://bettrbot.com">
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
