--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="joifnxodMZCpuMzg">
+  <meta name="google-site-verification" content="joifnxodMZCpuMzgXfd_pDdREC7pXwtDtyK0NikJiyc" />
   <title>BettrBot - Perfect Strategy Automation for Stake.us Blackjack</title>
   <meta name="description" content="Automate your Stake.us blackjack gameplay with mathematically perfect basic strategy. BettrBot plays every hand optimally - hit, stand, double, and split for maximum RTP.">
   <meta name="keywords" content="BettrBot, Stake.us, blackjack bot, blackjack automation, basic strategy, perfect strategy, gambling bot">
