--- a/index.html
+++ b/index.html
@@ -635,9 +635,7 @@
       </div>
       
       <div class="app-preview">
-        <div class="app-preview-placeholder">
-          [App Screenshot]
-        </div>
+        <img src="Betr App Screenshot.png" alt="BettrBot App Screenshot">
       </div>
     </section>
     
