--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
       </div>
       
       <div class="app-preview">
-        <img src="screenshot.png" alt="BettrBot App Screenshot">
+        <img src="screenshot.PNG" alt="BettrBot App Screenshot">
       </div>
     </section>
     
