--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <meta name="twitter:description" content="Automate your Stake.us blackjack with mathematically perfect basic strategy.">
   
   <link rel="canonical" href="https://bettrbot.com">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
