--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
     
     <footer>
       <div class="footer-links">
-        <a href="https://whop.com/orders/" target="_blank" class="footer-link">
+        <a href="manage.html" class="footer-link">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
           </svg>
