--- a/index.html
+++ b/index.html
@@ -977,12 +977,10 @@
           </video>
         </div>
         <div class="tab-panel" id="macos-panel">
-          <div class="video-placeholder">
-            <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-              <polygon points="5 3 19 12 5 21 5 3"/>
-            </svg>
-            <span>macOS installation video coming soon</span>
-          </div>
+          <video autoplay loop muted playsinline controls style="width: 100%; border-radius: 12px;">
+            <source src="macos-install.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
     </div>
