--- a/index.html
+++ b/index.html
@@ -787,6 +787,7 @@
       <div class="nav-links">
         <a href="#features">Features</a>
         <a href="#how-it-works">How It Works</a>
+        <a href="/affiliates.html">Affiliates</a>
         <a href="https://whop.com/checkout/plan_te1gYEOZCGhzr" target="_blank" class="btn btn-primary" style="padding: 10px 20px; font-size: 14px;">Get Access</a>
       </div>
     </nav>
