--- a/affiliates.html
+++ b/affiliates.html
@@ -529,7 +529,7 @@
             
             <div class="form-group">
               <label for="creatorCode">Desired Creator Code</label>
-              <input type="text" id="creatorCode" name="creator_code" placeholder="MICKEYMILLIONS" required>
+              <input type="text" id="creatorCode" name="creator_code" placeholder="BEARDOWN" required>
               <p class="hint">This will be your unique code (e.g., bettrbot.com/YOURCODE)</p>
             </div>
             
