--- a/affiliates.html
+++ b/affiliates.html
@@ -530,7 +530,7 @@
             <div class="form-group">
               <label for="creatorCode">Desired Creator Code</label>
               <input type="text" id="creatorCode" name="creator_code" placeholder="BEARDOWN" required>
-              <p class="hint">This will be your unique code (e.g., bettrbot.com/YOURCODE)</p>
+              <p class="hint">This will be part of your unique checkout link</p>
             </div>
             
             <button type="submit" class="submit-btn">Apply Now</button>
