--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
             <div class="stat-label">Expected RTP</div>
           </div>
           <div class="stat">
-            <div class="stat-value">100K+</div>
+            <div class="stat-value">5M+</div>
             <div class="stat-label">Hands Played</div>
           </div>
           <div class="stat">
